# sangyoon_anti_churn_csm_agent

./: README.md  chat_memory.db
anti_churn_agent/: .gitignore  README.md  agent_chat.py  appier_context.py  chat_memory.db  chat_memory.py  context_builder.py  data_loader.py  local_data_server.py  pyproject.toml  traced_system.py  tracers.py
anti_churn_agent/data/customers/ACME001/: campaigns.csv  profile.csv  support.csv  usage.csv
anti_churn_agent/data/customers/FIN001/: campaigns.csv  profile.csv  support.csv  usage.csv
anti_churn_agent/data/customers/TECH002/: campaigns.csv  profile.csv  usage.csv
anti_churn_agent/notebooks/: notebook.ipynb
data/customers/TECH002/: support.csv
notebooks/: brainstorm.ipynb
src/financial_researcher/config/: agents.yaml  tasks.yaml
